update: 补充rss swagger接口文档 (#27)
